--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,100 @@
-:root{
-
-}
-
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
+a{
+  text-decoration: none;
+  display: inline-block;
+}
+
+:root {
+  --top-highlight-color--: #131921;
+  --header-border-color--: #3b4149;
+  --search-bg-color--: #febd69;
+  --navbar-bg-color--:#232f3e;
+}
+
+body{
+  font-family: 'Rubik', sans-serif;
+}
+
+/* Highlights part */
+.header-top-strip{
+  border-bottom: 1px solid var(--header-border-color--);
+  background-color: var(--top-highlight-color--);
+  
+}
+
+/*  search-bar section*/
+
+.header-upper{
+  background-color: var(--top-highlight-color--);
+}
+
+.form-control:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+
+.header-upper .input-group-text{
+  background: var(--search-bg-color--);
+}
+
+.header-upper .header-upper-links img{
+  width: 35px;
+  height: 35px;
+
+}
+
+.gap-10{
+  gap: 10px;
+
+}
+
+.gap-15{
+  gap: 15px;
+}
+
+.gap-30{
+  gap: 30px;
+}
+
+/* nav-bar  */
+
+.header-bottom{
+  background-color: var(--navbar-bg-color--);
+}
+
+.header-bottom .menu-links a, 
+.header-bottom .dropdown button{
+  color: white;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: .3;
+  text-transform: uppercase;
+}
+
+
+.header-bottom .dropdown button{
+ box-shadow: none;
+}
+
+.header-bottom .dropdown-menu{
+  background-color: var(--top-highlight-color--);
+  width: 100%;
+  transform: translate3d(0px, 57px, 0px)!important;
+}
+
+.header-bottom .dropdown-item{
+  padding: 20px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--header-border-color--);
+}
+
+.header-bottom .dropdown-item:hover{
+  background-color: transparent;
+  color: var(--search-bg-color--)!important;
+}
