--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,10 +1,3 @@
-:root {
-  --top-highlight-color--: #131921;
-  --header-border-color--: #3b4149;
-  --search-bg-color--: #febd69;
-  --navbar-bg-color--: #232f3e;
-}
-
 
 footer{
   background-color: var(--navbar-bg-color--);
@@ -19,4 +12,8 @@ footer .input-group-text{
   color: white;
   padding: 8px 17px;
 
+}
+
+.padding-left{
+  padding-left: 3vw;
 }
