--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,14 +32,22 @@ body {
 }
 
 .button{
-  background-color: var(--navbar-bg-color--);
-  color: white;
+  display: inline-block;
   font-size: 14px;
-  padding: 13 5;
-  border-radius: 25px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-duration: .3s;
+  letter-spacing: 2px;
+  min-width: 80px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  padding: 15px 30px;
+  color: white;
+  background-color: var(--navbar-bg-color--);
 }
-
-.button:hover{
+.button:hover {
+  transform: scale(1.04);
   background-color: var(--search-bg-color--);
   color: var(--top-highlight-color--);
 }
