--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,3 +51,11 @@ body {
   background-color: var(--search-bg-color--);
   color: var(--top-highlight-color--);
 }
+
+
+// marquee
+.card-wrapper {
+  background-color: #fff;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
