--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,8 @@
 @import url(Footer.scss);
 @import url(Layout.scss);
 @import url(Home.scss);
+@import url(BlogCard.scss);
+@import url(ProductCard.scss);
 
 *{
   margin: 0;
