Featured collection section

--- a/src/styles/BlogCard.scss
+++ b/src/styles/BlogCard.scss
@@ -1,7 +1,7 @@
 :root{
   --para-color--: #777;
   --product-heading-color--: #bf4800;
-  --product-title-h5-color--: #1c1c1v;
+  --product-title-h5-color--: #1c1c1c;
 }
 
 .blog-card{
