--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,8 @@
 @import url(Home.scss);
 @import url(BlogCard.scss);
 @import url(ProductCard.scss);
+@import url(SpecialProducts.scss);
+
 
 *{
   margin: 0;
@@ -18,6 +20,11 @@ a{
 
 body {
   font-family: 'Rubik', sans-serif;
+}
+
+.gap-5 {
+  gap: 5px;
+
 }
 
 .gap-10 {
