--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -126,4 +126,34 @@
 }
 
 
-// marquee
+// famous products
+.famous-card .famous-content{
+  top: 10%;
+  left: 5%;
+}
+
+.famous-card img{
+  border-radius: 10px;
+}
+
+.famous-content h5{
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400px;
+  color: white;
+  margin-bottom: 7px;
+  text-transform: uppercase;
+}
+.famous-content h6 {
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+  color: white;
+
+}
+.famous-content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 100;
+  color: white;
+}
