ourstore left components(catogries, filter by, product tags random product)

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,7 @@
 @import url(BlogCard.scss);
 @import url(ProductCard.scss);
 @import url(SpecialProducts.scss);
+@import url(OurStore.scss);
 
 
 *{
@@ -68,3 +69,5 @@ body {
   box-shadow: 0 0 10px #0000001a;
   padding: 15px;
 }
+
+
