--- a/src/styles/OurStore.scss
+++ b/src/styles/OurStore.scss
@@ -70,3 +70,60 @@
 .random-products:first-child{
   border-bottom: 1px solid var(--products-border-color--);
 }
+
+.filter-short-grid{
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.grid img{
+  width: 30px;
+  height: 30px;
+  background-color: #f2f2f2;
+  padding: 5px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.gr-12{
+  width: 100%;
+}
+.gr-6{
+  width: 49%;
+}
+.gr-4{
+  width: 32%;
+}
+.gr-3{
+  width: 24%;
+}
+
+.gr-12 .product-card{
+  display: flex;
+  gap: 20px;
+
+}
+
+.gr-6 .product-image{
+  width: 100%;
+
+}
+
+.gr-6 .product-image img{
+  margin: auto;
+  display: block;
+}
+
+.gr-12 .product-card .product-image{
+  width: 270px;
+}
+
+.gr-12 .product-card .product-image {
+  height: auto;
+}
+
+.gr-12 .action-bar{
+  top: 17%;
+
+}
