--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,32 +6,47 @@
 @import url(ProductCard.scss);
 @import url(SpecialProducts.scss);
 @import url(OurStore.scss);
-@import url(Blog.scss);
+@import url(Contact.scss);
+@import url(CompareProducts.scss);
 
+:root {
+  --top-highlight-color--: #131921;
+  --header-border-color--: #3b4149;
+  --search-bg-color--: #febd69;
+  --navbar-bg-color--: #232f3e;
+  --para-color--: #777;
+  --product-heading-color--: #bf4800;
+  --product-title-h5-color--: #1c1c1c;
+  --badge-color--: #eb353b00;
+  --filter-title-color--: #1c1c1b;
+  --filter-font-color: #777;
+  --form-check--: #febd69;
+  --products-border-color--: #ededed;
+  --banner-heading--: #bf4800;
+  --background-color--: #f5f5f7;
+}
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-a{
+a {
   text-decoration: none;
   display: inline-block;
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .gap-5 {
   gap: 5px;
-
 }
 
 .gap-10 {
   gap: 10px;
-
 }
 
 .gap-15 {
@@ -42,12 +57,12 @@ body {
   gap: 30px;
 }
 
-.button{
+.button {
   display: inline-block;
   font-size: 14px;
   line-height: 1;
   border-radius: 500px;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   letter-spacing: 2px;
   min-width: 80px;
   text-transform: uppercase;
@@ -63,12 +78,9 @@ body {
   color: var(--top-highlight-color--);
 }
 
-
 // marquee
 .card-wrapper {
   background-color: #fff;
   box-shadow: 0 0 10px #0000001a;
   padding: 15px;
 }
-
-
