--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,9 +1,3 @@
-:root{
-  --banner-heading--: #bf4800;
-  --background-color--: #f5f5f7;
-  --catogories-border--: #ededed;
-}
-
 
 .ml-0{
   margin-left: 0;
@@ -110,19 +104,19 @@
 .categories > div:nth-child(2),
 .categories > div:nth-child(3),
 .categories > div:nth-child(4){
-  border-bottom: 1px solid var(--catogories-border--);
+  border-bottom: 1px solid var(--products-border-color--);
 }
 
 .categories > div:nth-child(1),
 .categories > div:nth-child(2),
 .categories > div:nth-child(3){
-  border-right: 1px solid var(--catogories-border--);
+  border-right: 1px solid var(--products-border-color--);
 }
 
 .categories>div:nth-child(5),
 .categories>div:nth-child(6),
 .categories>div:nth-child(7) {
-  border-right: 1px solid var(--catogories-border--);
+  border-right: 1px solid var(--products-border-color--);
 }
 
 
