--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,8 @@
 @import url(OurStore.scss);
 @import url(Contact.scss);
 @import url(CompareProducts.scss);
+@import url(Login.scss);
+
 
 :root {
   --top-highlight-color--: #131921;
