--- a/src/styles/CompareProducts.scss
+++ b/src/styles/CompareProducts.scss
@@ -4,7 +4,8 @@
   border-radius: 10px;
 }
 
-.compare-products-card .cross {
+.compare-products-card .cross ,
+.wishlist-card .cross{
   top: 15px;
   right: 15px;
   width: 23px;
@@ -12,15 +13,17 @@
   cursor: pointer;
 }
 
-.compare-product-details h5.title {
+.compare-product-details h5.title,
+.wishlist-card h5.title {
   font-size: 15px;
   line-height: 22px;
   font-weight: 500;
   color: var(--filter-title-color--);
 }
 
-.compare-product-details h6.price {
-  font-size: 19px;
+.compare-product-details h6.price,
+.wishlist-card h6.price {
+  font-size: 16px;
   line-height: 22px;
   font-weight: 400;
 }
