--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,6 +26,7 @@
   --products-border-color--: #ededed;
   --banner-heading--: #bf4800;
   --background-color--: #f5f5f7;
+  --input-bg-color--: #f7f7f7;
 }
 
 * {
