single blog page

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,6 +9,7 @@
 @import url(Contact.scss);
 @import url(CompareProducts.scss);
 @import url(Login.scss);
+@import url(Singleblog.scss);
 
 
 :root {
