--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,6 +10,7 @@
 @import url(CompareProducts.scss);
 @import url(Login.scss);
 @import url(Singleblog.scss);
+@import url(Policies.scss);
 
 
 :root {
