--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,7 @@
 @import url(Login.scss);
 @import url(Singleblog.scss);
 @import url(Policies.scss);
+@import url(SingleProduct.scss);
 
 
 :root {
