--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -4,7 +4,8 @@
 .header-top-strip {
   border-bottom: 1px solid var(--header-border-color--);
   background-color: var(--top-highlight-color--);
-
+  height: 25px;
+  padding-top: 0px!important;
 }
 
 
@@ -13,6 +14,9 @@
 
 .header-upper {
   background-color: var(--top-highlight-color--);
+  padding-top: 0px!important;
+  padding-bottom: 0px!important;
+  height: fit-content;
 }
 
 .form-control:focus {
@@ -24,29 +28,56 @@
   background: var(--search-bg-color--);
 }
 
-.header-upper .header-upper-links img {
-  width: 35px;
-  height: 35px;
-
+.header-upper .header-upper-links img{
+  width: 20px;
+  height: 20px;
+}
+.header-upper .header-upper-links .nav-items {
+  font-size: 14px;
+  padding: 5;
 }
 
+.search-height{
+  height: 35px;
+}
+
+.mar-left{
+margin-left: 3.3vw;
+}
+
+.header-upper .header-upper-links > div:hover{
+  // : not(:last-child)
+  background-color: var(--header-border-color--);
+  border-radius: 13px;
+}
 
 /* nav-bar  */
 
 .header-bottom {
   background-color: var(--navbar-bg-color--);
+  height: 37px;
+  padding-top: 0px!important;
+  padding-bottom: 0px!important;
 }
 
 .header-bottom .menu-links a,
 .header-bottom .dropdown button {
   color: white;
   font-size: 14px;
+  padding: 0px;
   line-height: 18px;
   font-weight: 400;
   letter-spacing: .3;
   text-transform: uppercase;
 }
 
+.header-bottom .menu-links a{
+  padding: 5px 8px;
+  border-radius: 12px;
+}
+.header-bottom .menu-links a:hover{
+  background-color: var(--top-highlight-color--);
+}
 
 .header-bottom .dropdown button {
   box-shadow: none;
@@ -60,7 +91,6 @@
 
 .header-bottom .dropdown-item {
   padding: 20px;
-  margin-bottom: 3px;
   border-bottom: 1px solid var(--header-border-color--);
 }
 
