--- a/src/styles/BlogCard.scss
+++ b/src/styles/BlogCard.scss
@@ -40,6 +40,6 @@
   font-size: 26px;
   font-weight: 500;
   line-height: 32px;
-  margin-bottom: 30px;
-  
+  margin-top: 5px;
+  margin-bottom: 10px;  
 }
