--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,23 +1,27 @@
-
-footer{
+footer {
   background-color: var(--navbar-bg-color--);
 }
 
-footer:not(:first-child){
+footer:not(:first-child) {
   border-top: 1px solid var(--header-border-color--);
 }
 
-footer .input-group-text{
+footer .input-group-text {
   background-color: var(--navbar-bg-color--);
   color: white;
   padding: 8px 17px;
 
 }
 
-.padding-left{
+.padding-left {
   padding-left: 2vw;
 }
 
-.fit-width{
+.fit-width {
   width: 100%;
+}
+
+.q-links .fit-width>div>.flex-column>address,
+.q-links .fit-width>div>.flex-column>a {
+  font-size: 13px;
 }
