--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,17 +1,16 @@
-
-.ml-0{
+.ml-0 {
   margin-left: 0;
   width: 100%;
 }
 
 // Banners section
-.main-banner-content{
+.main-banner-content {
   top: 15%;
   left: 5%;
 
 }
 
-.main-banner-content h4{
+.main-banner-content h4 {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -21,7 +20,7 @@
   text-transform: uppercase;
 }
 
-.main-banner-content h5{
+.main-banner-content h5 {
   font-size: 42px;
   line-height: 54px;
   letter-spacing: -2px;
@@ -29,7 +28,7 @@
   text-transform: none;
 }
 
-.main-banner-content p{
+.main-banner-content p {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.4;
@@ -70,14 +69,14 @@
 
 }
 
-.small-banner{
+.small-banner {
   width: 49%;
 
 }
 
 // services section
 
-.home-wrapper-2{
+.home-wrapper-2 {
   background-color: var(--background-color--);
 
 }
@@ -96,20 +95,20 @@
   padding: 10px 10px 10px 20px;
 }
 
-.categories > div > div{
+.categories>div>div {
   width: 60%;
 }
 
-.categories > div:nth-child(1),
-.categories > div:nth-child(2),
-.categories > div:nth-child(3),
-.categories > div:nth-child(4){
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4) {
   border-bottom: 1px solid var(--products-border-color--);
 }
 
-.categories > div:nth-child(1),
-.categories > div:nth-child(2),
-.categories > div:nth-child(3){
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3) {
   border-right: 1px solid var(--products-border-color--);
 }
 
@@ -121,16 +120,16 @@
 
 
 // famous products
-.famous-card .famous-content{
+.famous-card .famous-content {
   top: 10%;
   left: 5%;
 }
 
-.famous-card img{
+.famous-card img {
   border-radius: 10px;
 }
 
-.famous-content h5{
+.famous-content h5 {
   font-size: 13px;
   line-height: 20px;
   font-weight: 400px;
@@ -138,6 +137,7 @@
   margin-bottom: 7px;
   text-transform: uppercase;
 }
+
 .famous-content h6 {
   font-size: 24px;
   line-height: 38px;
@@ -145,9 +145,22 @@
   color: white;
 
 }
+
 .famous-content p {
   font-size: 16px;
   line-height: 24px;
   font-weight: 100;
   color: white;
+}
+
+// marquee
+.card-wrapper {
+  background-color: #fff;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 5px;
+}
+
+.marquee-height {
+  max-height: 60px;
+  overflow: hidden;
 }
